Prevent opening image when clicking on image link

--- a/lightbox-project/index.html
+++ b/lightbox-project/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1>Image Gallery</h1>
-  <ul>
+  <ul id="imageGallery">
     <li><a href="images/refferal_machine.png"><img src="images/refferal_machine.png" width="100" alt="Refferal Machine By Matthew Spiel"></a></li>
     <li><a href="images/space-juice.png"><img src="images/space-juice.png" width="100" alt="Space Juice by Mat Helme"></a></li>
     <li><a href="images/education.png"><img src="images/education.png" width="100" alt="Education by Chris Michel"></a></li>
