--- a/lightbox/index.html
+++ b/lightbox/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="css/style.css" type="text/css" media="screen" title="no title" charset="utf-8">
   <title>Image Gallery</title>
 </head>
