Allow artists to download their masterpieces

--- a/draw/index.html
+++ b/draw/index.html
@@ -13,6 +13,7 @@
       <li class="blue"></li>
       <li class="yellow"></li>
     </ul>
+    <button id="download">Download</button>
     <button id="revealColorSelect">New Color</button>
     <div id="colorSelect">
       <span id="newColor"></span>
