--- a/draw/index.html
+++ b/draw/index.html
@@ -14,6 +14,7 @@
       <li class="yellow"></li>
     </ul>
     <button id="download">Download</button>
+    <button id="clear">Clear</button>
     <button id="revealColorSelect">New Color</button>
     <div id="colorSelect">
       <span id="newColor"></span>
