Arrange buttons horizontally

--- a/draw/index.html
+++ b/draw/index.html
@@ -14,9 +14,11 @@
       <li class="yellow"></li>
     </ul>
     <p id='info'>&nbsp;</p>
-    <button id="download">Download</button>
-    <button id="clear">Clear</button>
-    <button id="revealColorSelect">New Color</button>
+    <div id="buttons">
+      <button id="download">Download</button>
+      <button id="revealColorSelect">New Color</button>
+      <button id="clear">Clear</button>
+    </div>
     <div id="colorSelect">
       <span id="newColor"></span>
       <div class="sliders">
