--- a/fading-list/index.html
+++ b/fading-list/index.html
@@ -30,6 +30,7 @@
       <li>20</li>
     </ul>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.11.3/jquery-ui.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="js/fading.js"></script>
   </body>
 </html>
