--- a/fading-list/index.html
+++ b/fading-list/index.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/fading.css">
   </head>
+
+  <header>
+    <h1>This is a fading list.</h1>
+    <h2>Click to change color.</h2>
+    <h3>Double-click, only if you dare...</h3>
+  </header>
+
   <body>
     <ul class="fading-list">
       <li>01</li>
