Add mouseover instructions

--- a/fading-list/index.html
+++ b/fading-list/index.html
@@ -10,7 +10,8 @@
   <header>
     <h1>This is a fading list.</h1>
     <h2>Click to change color.</h2>
-    <h3>Double-click, only if you dare...</h3>
+    <h3>Mouseover to change fade.</h3>
+    <h4>Double-click, only if you dare...</h4>
   </header>
 
   <body>
